--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
 <body>
 	<div class="page">
 		This is the landing page for the EggTree project.
-		
 		I'm developing this tool for displaying family tree information for my fictional egg-laying sapients.
-		A proper description will follow soon.
-		
+		(A proper description will follow soon.)
+		<br>
+		<a href="html/viewer.html">Start the viewer</a>
+		<br>
 		The code can be found on GitHub: <a href="https://github.com/kjanowski/EggTree">https://github.com/kjanowski/EggTree</a>
 	</div>
 </body>
