--- a/html/viewer.html
+++ b/html/viewer.html
@@ -34,7 +34,7 @@
 	<div id="eggTree">
 	</div>
 	<script>
-		loadFamily('../data/ImperialBloodline.json');
+		loadFamily('../config/ImperialBloodline.json');
 	</script>
 </body>
 </html>
