styling and SVG output

--- a/html/viewer.html
+++ b/html/viewer.html
@@ -29,10 +29,12 @@
 <head>
 	<title>EggTree</title>
 	<script src="../script/EggTree.js"></script>
+	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Oregano'>
+	<link rel="stylesheet" type="text/css" href="../style/layout.css">
+	<link rel="stylesheet" type="text/css" href="../style/theme_Kaleidoscope.css">
 </head>
 <body>
-	<div id="eggTree">
-	</div>
+	<svg id="eggTree" width="1000" height="500"></svg>
 	<script>
 		loadFamily('../config/ImperialBloodline.json');
 	</script>
