updated display approach

--- a/html/viewer.html
+++ b/html/viewer.html
@@ -37,6 +37,7 @@
 	<svg id="eggTree" width="1000" height="500"></svg>
 	<script>
 		loadFamily('../config/ImperialBloodline.json');
+		initFamily();
 	</script>
 </body>
 </html>
