added drawing of pairing nodes

--- a/html/viewer.html
+++ b/html/viewer.html
@@ -36,6 +36,7 @@
 <body>	
 	<svg id="eggTree" width="1000" height="500"></svg>
 	<script>
+		loadDrawParams('../config/drawParams_ImperialBloodline.json');
 		loadFamily('../config/ImperialBloodline.json');
 	</script>
 </body>
