--- a/html/viewer.html
+++ b/html/viewer.html
@@ -29,12 +29,13 @@
 <head>
 	<title>EggTree</title>
 	<script src="../script/EggTree.js"></script>
+	<link rel="icon" href="../img/favicon_kaleidechse_57x57.png" type="image/png">
 	<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Oregano'>
 	<link rel="stylesheet" type="text/css" href="../style/layout.css">
 	<link rel="stylesheet" type="text/css" href="../style/theme_Kaleidoscope.css">
 </head>
 <body>	
-	<svg id="eggTree" width="1000" height="500"></svg>
+	<svg id="eggTree" width="1000" height="1000"></svg>
 	<script>
 		loadDrawParams('../config/drawParams_ImperialBloodline.json');
 		loadFamily('../config/ImperialBloodline.json');
